--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,10 @@
-<app-deafult-login-layout></app-deafult-login-layout>
+<app-deafult-login-layout
+  title="Login into your account"
+  primaryBtnText="Login Now"
+  secondaryBtnText="Signup Now"
+>
+  <form [formGroup]="loginForm">
+
+  </form>
+
+</app-deafult-login-layout>
